--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^6.0.0",
+    "mockjs": "^1.1.0",
     "prettier": "^2.2.1",
     "vue-template-compiler": "^2.6.11"
   }
