--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.1",
     "js-cookie": "^2.2.1",
     "node-sass": "^5.0.0",
+    "nprogress": "^0.2.0",
     "sass-loader": "^10.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
